--- a/Call4CareDoc/android/app/build.gradle
+++ b/Call4CareDoc/android/app/build.gradle
@@ -130,6 +130,7 @@ android {
 
     defaultConfig {
         applicationId "com.call4caredoc"
+        vectorDrawables.useSupportLibrary = true
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
