--- a/Call4CareDoc/android/app/src/main/AndroidManifest.xml
+++ b/Call4CareDoc/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
   package="com.call4caredoc">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-feature android:name="android.hardware.camera.front" android:required="false" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
       android:name=".MainApplication"
