--- a/Call4CareDoc/ios/Call4CareDoc/Info.plist
+++ b/Call4CareDoc/ios/Call4CareDoc/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -37,8 +37,12 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSContactsUsageDescription</key>
+	<string>We need to access contact so we can check who is already present in app</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We need to access location so we can share with patient</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need to access your photo to identify the real you</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
