--- a/Call4CareDoc/package.json
+++ b/Call4CareDoc/package.json
@@ -15,6 +15,10 @@
     "@react-native-community/masked-view": "^0.1.10",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-calendars": "^1.1129.0",
+    "react-native-chart-kit": "^6.9.0",
+    "react-native-contacts": "^6.0.3",
+    "react-native-dropdown-picker": "^3.7.8",
     "react-native-geocoder-reborn": "^0.9.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-crop-picker": "^0.35.1",
@@ -24,6 +28,8 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.15.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.3",
     "react-navigation-drawer": "^2.6.0",
