--- a/Call4CareDoc/package.json
+++ b/Call4CareDoc/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^1.16.3",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-calendars": "^1.1129.0",
@@ -23,6 +24,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-crop-picker": "^0.35.1",
     "react-native-phone-input": "^0.2.4",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-safe-area-view": "^1.1.1",
